# gDMFT

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  THIRD_PARTY.md  pyproject.toml
.github/workflows/: ci.yml
data/: README.md  registry.toml
data/datasets/references-benchmarks-v1/: README.md  manifest.json
data/example/: manifest.json  points.csv
docs/: architecture.md  atlas.md  concepts.md  data-contract.md  data-policy.md  index.md  paper-story.md  release-checklist.md  results-draft.md  roadmap.md  workflow.md
docs/datasets/: single-site-20260717.md
src/gdmft/: __init__.py
studies/: README.md
studies/paper_figures/: audit_selection.py  census.py  common.py  compare.py  fig_anatomy.py  fig_benchmark_compare.py  fig_compare_convergence.py  fig_compare_functions.py  fig_compare_observables.py  fig_compare_params.py  fig_compare_residual.py  fig_compare_vs_T.py  fig_lambda_frame.py  fig_single_site.py  fig_spectra.py  fig_story.py  fig_story_budget_controls.py  fig_story_poleflight.py  fig_v0_death.py  figstyle.py  gui.py  make_all.py  make_comparison.py  story_README.md  view.py
studies/reference_data_import/: README.md  import_benchmark_references.py  import_gem_references.py
studies/single_site_data_import/: README.md  extend_v2_with_fill.py  import_snapshot.py
tests/: test_atlas_build.py  test_atlas_catalog.py  test_atlas_derive.py  test_atlas_dos.py  test_atlas_payload.py  test_atlas_poles.py  test_atlas_ui_contract.py  test_manifest.py  test_paper_figures.py  test_reference_dataset.py  test_single_site_datasets.py
(+97 files in other folders)
